Lyra_UI/css/Lyra_UI.css
/* ... */
.panel-header .btn span {
    font-size: 4rem;
    position: relative;
    top: -8px;
}

.side-panel .people-bio {
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: -4.2em;
    padding: 0px 0em 40px 0em;
}

.side-panel .people-type {
    display: flex;
    flex-direction: row;
}

.people-type.alt {
    flex-direction: column;
    align-items: center;
}
.people-type.alt .social-media {
    margin: 0;
    padding: 0px 0;
    flex-direction: row;
}

.side-panel:has(.people-type.alt) {
    width: 480px;
    padding: 0 0px;
}

.side-panel .name {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 7px;
}

.side-panel .name h2 {
    color: var(--color-text-main);
    font-size: 28px;
    font-weight: 450;
}

.side-panel .role {
    display: flex;
    text-transform: uppercase;
    color: var(--color-primary-500);
    font-weight: 500;
}

.side-panel .nickname {
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: .8px;
    color: var(--color-surface-text);
    font-weight: 500;
}

.side-panel .people-info {
    padding: 0px 24px;
    display: flex;
    flex-direction: column;
    gap: 16px;
}
.badge-container {
    display: flex; gap: 16px; flex-wrap: wrap; margin: 0px 4px; color: var(--color-surface-text);
}
.badge-container.bg {
    background-color: var(--color-icon-bg);
    padding: 14px 10px 14px 10px;
}
.badge-container.compact {
    margin: 20px 5%;
}
.badge-container.custom {
    margin: 20px 2px;
    flex-direction: column;
}
.badge {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    border-bottom: 1px solid var(--color-border-100);
    color: var(--color-text-main);
    text-align: left;
    font-family: 'JetBrains Mono', monospace;
    padding: 12px 0px 12px 0px;
    font-weight: 500;
    width: 100%;
    cursor: pointer;
    font-size: 16px;
    transition: padding-left .5s cubic-bezier(0.165, 0.84, 0.44, 1);
}
.badge img {
    width: 50px; height: 50px; border-radius: 50px; background-color: var(--color-icon-bg);
}
.badge.uppercase {
    cursor: auto;
    text-transform: uppercase;
}
.badge span.gray {
    text-align: right;
    max-width: 400px;
    text-transform: none;
    line-height: 26px;
    color: var(--color-surface-text);
}
.badge span {
    color: var(--color-text-main);
}
.badge-container.custom .badge {
    justify-content: flex-start;
    gap: 16px;
}
.badge:hover {
    padding-left: 30px;
}

.badge:hover::before {
    display: block;
}

.badge-container :last-child {
    border-bottom: none;
}

.side-panel p {
    font-family: "Source Serif 4" !important;
    font-size: 16px;
    line-height: 27px;
    font-weight: 400;
    text-align: left;
    margin: 0;
}
.side-panel .people-banner {
    position: relative;
    background-color: var(--color-icon-bg) !important;
    width: 100%;
    height: 270px;
    margin-bottom: -5.6em;
}
.side-panel .people-banner.no-image {
    margin-bottom: 0;
    height: 270px;
}
.side-panel .people-banner.no-image ~ .people-img {
    display: none;
}
.side-panel .people-banner.no-image ~ .people-name {
    padding: 10px 24px;
}
.side-panel .people-banner img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    border-radius: inherit;
    aspect-ratio: 1 / 1;
    object-position: center 20%;
}
.people-banner img::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
    width: 100%;
    height: 100%;
    background: var(--color-primary-900);
}
.side-panel .people-name {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding: 0 28px;
}
.side-panel .people-img {
    display: flex;
    justify-content: center;
    background-color: rgb(100, 100, 100) !important;
    width: 150px;
    border-radius: 50%;
    height: 150px;
    z-index: 1;
    margin: 0 24px 0px 28px;
    border: 12px solid var(--color-surface-0);
}
.side-panel .people-img img {
    object-fit: cover;
    width: 100%;
    border-radius: inherit;
    height: 100%;
    object-position: center 0%;
}
.side-panel .social-media {
    gap: 30px;
    margin: 10px 0 12px 0 !important;
}
.side-panel .social-media span {
    display: none;
    font-size: 15px
}

.hamburger {
    background-color: transparent !important;
    height: 55px;
    position: relative;
    top: 0px;
    left: 0px;
    display: none;
    font-size: 16px !important;
}

.hamburger.no-pointer {
    pointer-events: none;
}


.hamburger::before {
    display: none !important;
    opacity: 0;
}
.hamburger.active .equal {
    gap: 0;
}
.hamburger.active .equal .div1 {
    transform: rotate(42deg);
    top: 1px;
    background-color: var(--color-primary-500) !important;
}

.hamburger.active .equal .div2 {
    opacity: 0;
    display: none;
}

.hamburger:not(.active) .equal .div2 {
    animation: fadeInLeft .5s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.hamburger.active .equal .div3 {
    transform: rotate(-43deg);
    background-color: var(--color-primary-100) !important;
}

:root.dark-mode .hamburger {
    background-color: transparent;
}

.equal {
    width: 32px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 5px 2px;
    gap: 8px;
    position: relative;
    transform: scale(1.25);
    transition: opacity .3s cubic-bezier(0.075, 0.82, 0.165, 1), transform .5s cubic-bezier(1, 0, 0, 1);
}

.equal div {
    position: relative;
    width: 37px;
    height: 2px;
    top: 0px;
    background-color: white;
    filter: invert(1);
    transition: all .4s cubic-bezier(1, 0, 0, 1);
}

.equal .div1 {
    width: 35px;
}
.equal .div2 {
    width: 22px;
}
.hamburger.active .equal div {
    filter: invert(0);
    width: 37px !important;
}
.hamburger.active .equal .div1 {
    width: 37px !important;
}

.hamburger span {
    font-size: 2.3rem;
    contain: paint;
    color: #909090;
}
/* ... */

